Changelog
=========


1.4.2 (unreleased)
------------------

- Nothing changed yet.


1.4.1 (2017-11-15)
------------------

- Add event after initializing a widget.
  [elioschmutz]

1.4.0 (2017-11-14)
------------------

- Add possiblity to add templates for the select2 widget.
  [elioschmutz]


1.3.6 (2017-08-31)
------------------

- Only add terms to the new field list if it's really a new selected term.
  [mathias.leimgruber]


1.3.5 (2017-08-31)
------------------

- Fix a bug, which I introduced in 1.3.3 and miss to catch in 1.3.4 :-( [mathias.leimgruber]


1.3.4 (2017-08-30)
------------------

- Automatically open the search menu for single value fields. [mathias.leimgruber]

- BugFix: Fix JS error on single value fields. [mathias.leimgruber]


1.3.3 (2017-07-31)
------------------

- BugFix: No longer add items if they're not "really" selected.
  [mathias.leimgruber]


1.3.2 (2017-07-11)
------------------

- Removed superfluous `for` attribute for a behavior without a `factory` configured. [phgross]


1.3.1 (2017-06-14)
------------------

- Added french translations.
  [phgross]

- BugFix: Do not use the value as id in the search endpoint.
  [mathias.leimgruber]

- BugFix: Get stored terms by token not by value, since self.value stores the widget value.
  [mathias.leimgruber]


1.3.0 (2017-05-11)
------------------

- Add testbrowser widget for Keywordwidgets with async option.
  [mathias.leimgruber]

- No longer load keywordwidget JS inline in the widget.
  [mathias.leimgruber]

- Implement new async option.
  [mathias.leimgruber]


1.2.0 (2017-04-24)
------------------

- Implement new option to create new terms with unicode values instead of utf-8.
  [mathias.leimgruber]


1.1.4 (2017-03-20)
------------------

- Always hide new entries field.
  [mathias.leimgruber]


1.1.3 (2017-03-09)
------------------

- No longer duplicate keywords with non ascii chars. [deiferni]
