@@ -9,4 +9,11 @@
       for="plone.dexterity.interfaces.IDexterityContent"
       />
 
+  <plone:behavior
+      title="Test-behavior that includes an optional choice field."
+      provides=".behavior.IOptionalChoiceField"
+      for="plone.dexterity.interfaces.IDexterityContent"
+      />
+
+
 </configure>
